--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -72,7 +72,7 @@ body {
     display: inline-block;
     padding-left: 11px;
     padding-right: 11px;
-    font-size: 20px;
+    font-size: 18px;
 }
 
 .list-inline > li > a {
@@ -2335,7 +2335,7 @@ animation-delay: 0.7s;
     }
 
     .tape-action-container {
-        height: 285px;
+        height: auto;
     }
 
     .mobile2 {
