--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -99,6 +99,7 @@ h1 {
 
 .cd-fixed-bg {
 	min-height: 100%;
+
 	background-size: cover;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
@@ -106,7 +107,7 @@ h1 {
 }
 
 .cd-fixed-bg.cd-bg-1 {
-  background-image: url("../images/forkliftandpeople.png");
+  background-image: url("../images/Speedway_Front-1096X465-hdr.jpg");
   background-size: 100%;
   margin-left: 0px;
   margin-right: 0px;
@@ -998,13 +999,14 @@ h1.fade-in.sup-context {
     font-family: 'Open Sans', sans-serif;
     text-shadow: 3px 3px #110a66;
     color: #f5f5f5;
-    padding-top: 270px;
+    padding-top: 200px;
+    // padding-top: 270px;
     font-size: 80px;
     font-weight: bolder;
     z-index: 100;
     position: absolute;
     top:0;
-    left:165px;
+    // left:165px;
 }
 
 .tape-header  {
